@@ -1,5 +1,6 @@
 3.8.4
 - "meta viewport" tag was added to mask's HTML for a better mobile rendering
+- P4A::getMetaViewport() and setMetaViewport() methods were added
 
 3.8.3
 - P4A_DB_Navigator now supports query defined sources
